finish my first website

--- a/index.html
+++ b/index.html
@@ -11,14 +11,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
       <div class="half-width">
         <h1>Welcame To</h1>
         <h1><span class="name-highlight">Noyon </span> Developer</h1>
         <h3>World-class professional web dev</h3>
         <p>A web developer is a programmer responsible for turning user stories, mockups, and web designs into functional websites. They use web fundamentals such as HTML, CSS, and JavaScript to build, manage, and deploy web applications. Web developers might also use a variety of programming languages depending on your website's technology stack, including Python, PHP, and Ruby.</p>
+        <a class="link-button"  target="_blank" href="https://www.youtube.com/">click me</a>
       </div>
       <div  class="half-width"><img src="images/Profile1.png" alt=""></div>
     </section>
+      <section class="dream-area">
+        <div class="half-width">
+          <img src="images/image 11.png" alt="">
+        </div>
+        <div class="half-width">
+          <h2>Big Dream</h2>
+          <h3>Become World's Developer Hero</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui asperiores atque corporis doloribus facilis placeat deserunt deleniti aut dolor reprehenderit? Facere quod doloribus facilis eaque nam consequatur vitae quasi eligendi.</p>
+          <a class="link-button"  target="_blank" href="https://www.programming-hero.com/">read me</a>
+        </div>
+
+      </section>
+      <section class="experiance-area">
+        <h2>Experiance Area</h2>
+        <div id="full-stack" class="half-width single-experiance"> 
+          <h2>Full Stack Web Developer</h2>
+          <h3 class="name-highlight">2021-present | Pro level web Developer </h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi officiis dignissimos magni repellat ab unde, minima hic vero facilis soluta qui tempore architecto expedita sequi adipisci quo optio ad eos!</p>
+          
+
+        </div>
+        <div id="baby-web" class="half-width single-experiance  ">
+          <h2>Baby Web Developer</h2>
+          <h3 class="name-highlight "> 2020-past | Beginner Web developer</h3>
+          
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat amet eos dicta necessitatibus delectus dolorum porro hic voluptatibus. Magnam facilis deserunt maxime, consequatur libero repellat possimus laborum voluptates minus dolorum?</p>
+
+        </div>
+
+      </section>
+      <footer>
+        <p>@ peter parker 2022, a programming hero initial </p>
+      </footer>
 </body>
 </html>
